--- a/css/site.css
+++ b/css/site.css
@@ -116,7 +116,6 @@ header{
 }
 
 .seasonal-list li{
-    background-color:#fff;
     display:inline-block;
     width:23%;
     height:400px;
@@ -127,7 +126,6 @@ header{
     margin:10px;
     margin-bottom:10px;
     text-align:center;
-    box-shadow: 0 2px 2px #cbcbcb;
     transform:scale(1.0);
     transition: transform 0.3s;
 }
@@ -138,14 +136,24 @@ header{
     color: #c5a077;
 }
 
-.product-name{ /*product title*/
-    height:0px;
-    font-weight:700;
-    font-size:100%;
+.seasonal-list p{
+    text-align:left;
+    margin:5px;
 }
 
-.product-img{
+.product-name{ /*product title*/
+    height:40px;
+    width:100%;
+    text-align:center;
+    font-weight:700;
+    font-size:100%;
+    box-sizing:border-box;
+}
+
+.seasonal-list .product-img{
+    background-color:#fff;
     height:230px;
+    box-shadow: 0 2px 2px #cbcbcb;
 }
 
 .thumb{
@@ -173,48 +181,78 @@ header{
     width:68%;
 }
 
-#product-details h1{
-    font-size:200%;
-}
-
-#product-details h2{
-    font-size: 150%;
-    margin-bottom:20px;
-}
-
 #product-details .product-img{
-    height:auto;
+    width:50%;
     display:inline-block;
     float:left;
+    margin: 30px 0;
 }
 
 #product-details .product-img img{
-    height:300px;
-    width:auto;
-    margin-left:50%;
+    width:80%;
+    height:auto;
 }
 
+#product-details .product-name{
+    font-size:200%;
+    padding-left:0px;
+}
 
+#product-details .volume{
+    font-size: 150%;
+    margin-bottom:20px;
+    padding-left:0px;
+}
 
-#product-details .row .info{
-    margin-top:20px;
-    line-height:30px;
-    position:relative; /* needed for centering*/
-    width:50%;
+#product-details .volume:after{
+    display: block;
+    height: 1px;
+    background-color: #a6babc;
+    content: " "; /* must specify content, just put empty as placeholder*/
+    width: auto;
+    margin: 0 auto; /* tb:0, lr: auto */
+    margin-top: 30px; /* space above divider */
+    margin-bottom: 30px; /* space below divider */
+}
+
+#product-details .product-name, 
+#product-details .volume{
     text-align:left;
     display:inline-block;
+    width:40%;
+}
+
+#product-details .row .info{
+    line-height:30px;
+    position:relative; /* needed for centering*/
+    width:40%;
+    text-align:left;
+    display:inline-block;
+}
+
+#product-details table:after{
+    display: block;
+    height: 1px;
+    background-color: #a6babc;
+    content: " "; /* must specify content, just put empty as placeholder*/
+    width: auto;
+    margin: 0 auto; /* tb:0, lr: auto */
+    margin-top: 30px; /* space above divider */
+    margin-bottom: 30px; /* space below divider */
 }
 
 .info tr td{
     vertical-align: top;
 }
 
-.info tr td .price{
-    font-size:300%;
+.info tr td.price{
+    font-size:200%;
+    padding-bottom:20px;
 }
 
 .info tr td:first-child{
     font-weight:700;
+    width:40%;
 }
 
 
