--- a/css/site.css
+++ b/css/site.css
@@ -48,7 +48,7 @@ h2{
 
 .btn:link, 
 .btn:visited{ /* so that both link and visited look the same */
-    display: inline-block;
+    display:block;
     padding:10px 30px; /* t/b:10, l/r:30 */
     font-weight: 300;
     text-decoration: none; /* get rid of underline */
@@ -59,7 +59,7 @@ h2{
     border: 1px solid #522c1c; /* so same size as ghost */
     color: #fff; /* font color */
     margin-right: 15px; /* to space out buttons a lil */
-    margin:20px 0;
+    margin:40px 0;
 }
 
 .btn:hover,
@@ -76,6 +76,17 @@ h2{
     clear:both;
     display:block;
     height:0;
+}
+
+.divider:after{
+    display: block;
+    height:0.5px;
+    background-color: #522c1c;
+    content: " "; /* must specify content, just put empty as placeholder*/
+    width: auto;
+    margin: 0 auto; /* tb:0, lr: auto */
+    margin-top: 10px; /* space above divider */
+    margin-bottom: 10px; /* space below divider */
 }
 
 /*------------------------------------------*/
@@ -105,13 +116,13 @@ header{
     bottom: 40%;
     right: 10%;
     text-align:right;
-    transition:
 }
 
 .heading h1{
     color:#ede3d5;
     font-size:600%;
     margin-bottom:100px;
+    -webkit-animation-duration: 2s;
     animation-duration: 2s;
     height:30px; /* so animation won't be too dramatic */
 }
@@ -121,6 +132,7 @@ header{
     margin:0;
     font-size:200%;
     font-weight:400;
+    -webkit-animation-duration: 2s;
     animation-duration: 2s;
 }
 
@@ -148,13 +160,21 @@ header{
     margin:10px;
     margin-bottom:10px;
     text-align:center;
+    -webkit-transform:scale(1.0);
     transform:scale(1.0);
+    -webkit-transition: -webkit-transform 0.3s;
+    transition: -webkit-transform 0.3s;
     transition: transform 0.3s;
+    transition: transform 0.3s, -webkit-transform 0.3s;
 }
 
 .seasonal-list li:hover{
+    -webkit-transform:scale(1.05);
     transform:scale(1.05);
+    -webkit-transition: -webkit-transform 0.3s;
+    transition: -webkit-transform 0.3s;
     transition: transform 0.3s;
+    transition: transform 0.3s, -webkit-transform 0.3s;
     color: #c5a077;
 }
 
@@ -163,18 +183,19 @@ header{
     margin:5px;
 }
 
-.product-name{ /*product title*/
+p.product-name{ /*product title*/
     height:40px;
     width:100%;
-    text-align:center;
     font-weight:700;
     font-size:100%;
+    -webkit-box-sizing:border-box;
     box-sizing:border-box;
 }
 
 .seasonal-list .product-img{
     background-color:#fff;
     height:230px;
+    -webkit-box-shadow: 0 2px 2px #cbcbcb;
     box-shadow: 0 2px 2px #cbcbcb;
 }
 
@@ -183,7 +204,9 @@ header{
 }
 
 .not-found{
-    height:100%;
+    margin-top:20px;
+    height:80%;
+    -webkit-box-sizing:border-box;
     box-sizing:border-box;
 }
 
@@ -197,80 +220,65 @@ header{
 /* Section 2 - Product Details */
 /*------------------------------------------*/
 
+
+
 #product-details .row{
     text-align:center;
     background-color:#ffffff;
-    width:68%;
+    width:70%;
+    -webkit-box-shadow: 0 2px 2px #cbcbcb;
     box-shadow: 0 2px 2px #cbcbcb;
-}
-
-#product-details .product-img{
-    width:50%;
-    display:inline-block;
-    float:left;
-    margin: 30px 0;
-}
-
-#product-details .product-img img{
-    width:80%;
-    height:auto;
+    display:-webkit-box;
+    display:-ms-flexbox;
+    display:flex;
 }
 
 #product-details .product-name{
+    text-align:left;
     font-size:200%;
-    padding-left:0px;
 }
 
-#product-details .volume{
-    font-size: 150%;
-    margin-bottom:20px;
-    padding-left:0px;
-}
-
-#product-details .volume:after{
-    display: block;
-    height: 1px;
-    background-color: #a6babc;
-    content: " "; /* must specify content, just put empty as placeholder*/
-    width: auto;
-    margin: 0 auto; /* tb:0, lr: auto */
-    margin-top: 30px; /* space above divider */
-    margin-bottom: 30px; /* space below divider */
-}
-
-#product-details .product-name, 
-#product-details .volume{
+#product-details h2{
     text-align:left;
-    display:inline-block;
-    width:40%;
+    font-size:150%;
+    font-weight:700;
 }
 
-#product-details .row .info{
-    line-height:30px;
-    position:relative; /* needed for centering*/
-    width:40%;
-    text-align:left;
-    display:inline-block;
+#product-details .product-img{
+    vertical-align:middle;
 }
 
-#product-details table:after{
-    display: block;
-    height: 1px;
-    background-color: #a6babc;
-    content: " "; /* must specify content, just put empty as placeholder*/
-    width: auto;
-    margin: 0 auto; /* tb:0, lr: auto */
-    margin-top: 30px; /* space above divider */
-    margin-bottom: 30px; /* space below divider */
+#product-details .product-img img{
+    width:70%;
+    height:auto;
+    margin-top:10px;
+}
+
+#product-details .product-img .not-found{
+    width:50%;
+    height:auto;
+    margin-top:30px;
+}
+
+#product-details table{
+    width:400px;
+    margin-left:10px;
+}
+
+.col:last-child{
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .info tr td{
     vertical-align: top;
+    text-align:left;
+    line-height:150%;
 }
 
 .info tr td.price{
     font-size:200%;
-    padding-bottom:20px;
+    padding-bottom:10px;
 }
 
 .info tr td:first-child{
@@ -278,10 +286,9 @@ header{
     width:40%;
 }
 
-#product-details .btn{
-    width:20%;
+.col a{
+    position:relative;
 }
-
 
 /*------------------------------------------*/
 /* Animations using Animate.css */
