--- a/css/site.css
+++ b/css/site.css
@@ -46,8 +46,8 @@ h2{
     padding-left:10px;
 }
 
-.btn:link, 
-.btn:visited{ /* so that both link and visited look the same */
+a.btn:link, 
+a.btn:visited{ /* so that both link and visited look the same */
     display:block;
     padding:10px 30px; /* t/b:10, l/r:30 */
     font-weight: 300;
@@ -55,15 +55,23 @@ h2{
     border-radius: 200px;
     -webkit-transition: background-color 0.2s, border 0.2s, color 0.2s;
     transition: background-color 0.2s, border 0.2s, color 0.2s; 
-    background-color: #522c1c;
-    border: 1px solid #522c1c; /* so same size as ghost */
     color: #fff; /* font color */
     margin-right: 15px; /* to space out buttons a lil */
     margin:40px 0;
 }
 
-.btn:hover,
-.btn:active{
+.btn-full{
+    background-color: #522c1c;
+    border: 1px solid #522c1c; /* so same size as ghost */
+}
+
+.btn-faded{
+    background-color: #a6babc; /* darker */
+    border: 1px solid #a6babc; /* border must be darker too */
+}
+
+.btn-full:hover,
+.btn-full:active{
     background-color: #c5a077; /* darker */
     border: 1px solid #c5a077; /* border must be darker too */
 }
@@ -211,7 +219,7 @@ p.product-name{ /*product title*/
 }
 
 .price{
-    font-weight:400px;
+    font-weight:700;
     font-size:130%;
     margin:0;
 }
@@ -288,6 +296,18 @@ p.product-name{ /*product title*/
 
 .col a{
     position:relative;
+}
+
+td.stock-status{
+    padding-top:10px;
+    vertical-align:bottom;
+    font-size:130%;
+}
+
+.stock-status img{
+    width:20px;
+    height:auto;
+    margin-right:10px;
 }
 
 /*------------------------------------------*/
