--- a/css/site.css
+++ b/css/site.css
@@ -60,34 +60,38 @@ a.btn:visited{ /* so that both link and visited look the same */
     transition: background-color 0.2s, border 0.2s, color 0.2s; 
     margin-right: 15px; /* to space out buttons a lil */
     margin:20px 0;
+    color:#fff;
 }
 
 .btn-full{
     background-color: #522c1c;
-    color:#fff;
     border: 1px solid #522c1c; /* so same size as ghost */
 }
 
+.btn-full:hover,
+.btn-full:active{
+    background-color: #c5a077; /* lighter */
+    border: 1px solid #c5a077; /* border must be lighter too */
+}
+
+a.btn-ghost:link,
+a.btn-ghost:visited,
 .btn-ghost{
     border: 1px solid #522c1c;
     color: #2f2a2b;
 }
 
+a.btn-ghost:hover,
+a.btn-ghost:active{
+    border: 1px solid #c5a077; 
+    color: #c5a077;
+}
+
 .btn-faded{
-    background-color: #a6babc; /* darker */
-    border: 1px solid #a6babc; /* border must be darker too */
+    background-color: #a6babc; /* lighter */
+    border: 1px solid #a6babc; /* border must be lighter too */
 }
 
-.btn-full:hover,
-.btn-full:active{
-    background-color: #c5a077; /* darker */
-    border: 1px solid #c5a077; /* border must be darker too */
-}
-
-.btn-ghost:hover,
-.btn-ghost:active{
-    background-color: #c5a077; /* darker */
-}
 
 /*clear float after element */
 .clearfix{zoom:1}
