--- a/css/site.css
+++ b/css/site.css
@@ -7,6 +7,11 @@
 * torquoise: #a6babc
 */
 
+*{
+    padding:0px;
+    margin:0px;
+
+}
 html, body{
     color: #2f2a2b; /* font color */
     font-family:'Open Sans','Arial',sans-serif; /* if not Open Sans, use Arial */
@@ -21,10 +26,7 @@ html, body{
 
 section{
     background-color:#f4f4f4;
-    margin: 30px auto;
     border-color:red;
-    padding-top:30px;
-    padding-bottom:30px;
 }
 
 .row {
@@ -162,10 +164,45 @@ header{
 }
 
 /*------------------------------------------*/
-/* Section 1 - Seasonal Beverages */
+/* Section - Summer is back */
+/*------------------------------------------*/
+
+section#summer{
+    background-image: linear-gradient(rgba(180, 159, 88, 0.69),rgba(0, 0, 0, 0)),url(../img/summer2.jpg);
+    background-size:cover;
+    background-position:right;
+    background-attachment: fixed;
+    height:100vh;
+    padding:0px;
+    margin:0px;
+}
+
+section .row{
+    position:relative;
+    top:35%;
+    width:100%;
+}
+
+section .heading{
+    position:relative;
+    top:0%;
+    left:15%;
+    width:70%;
+    text-align:left;
+    vertical-align:middle;
+    margin-top:0px;
+
+}
+
+section .heading h1{
+    margin-top:0px;
+}
+
+/*------------------------------------------*/
+/* Section - Seasonal Beverages */
 /*------------------------------------------*/
 #seasonal-beverages{
-    width:100%
+    width:100%;
 }
 
 .seasonal-list{ /* ul */
@@ -229,8 +266,7 @@ p.product-name{ /*product title*/
 }
 
 .not-found{
-    margin-top:20px;
-    height:80%;
+    height:100%;
     -webkit-box-sizing:border-box;
     box-sizing:border-box;
 }
@@ -242,23 +278,27 @@ p.product-name{ /*product title*/
 }
 
 /*------------------------------------------*/
-/* Section 2 - Product Details */
+/* Section - Product Details */
 /*------------------------------------------*/
 
 section#product-details{
     display:none;
+    background-image: linear-gradient(rgba(255, 255, 255, 0.4),rgba(255, 255, 255, 0.4)),url(../img/beerpack.jpg);
+    background-position:right;
+    background-attachment: fixed;
+    height:100vh;
+    padding-bottom:0px;
 }
 
 #product-details .row{
     text-align:center;
-    width:80%;
+    width:70%;
     display:-ms-flexbox;
     display:-webkit-box;
     display:flex;
     border:0.5px solid #c5a077;
     padding:0px;
-    background-color: #fff;
-
+    top:10%;
 }
 
 #product-details .product-name{
@@ -273,14 +313,20 @@ section#product-details{
     color: #c5a077;
 }
 
-#product-details .col{
-    margin:30px;
-}
 
 #product-details .col:first-child{
-    background-color:#fff;
-    width:50%;
+    width:55%;
     border-right:1px #c5a077;
+    overflow:hidden;
+    margin-top:0px;
+    margin-bottom:0px;
+}
+
+#product-details .col:last-child{
+    background-color: hsla(0, 0%, 100%, 0.9);
+    width:100%;
+    padding:30px;
+    margin:0px;
 }
 
 #product-details .product-img{
@@ -288,15 +334,15 @@ section#product-details{
 }
 
 #product-details .product-img img{
-    width:70%;
-    height:auto;
-    margin-top:10px;
+    width:130%;
+    height:100%;
+    opacity:0.9;
+    margin:0px;
 }
 
 #product-details .product-img .not-found{
-    width:50%;
-    height:auto;
-    margin-top:30px;
+    width:120%;
+    height:100%;
 }
 
 #product-details table{
@@ -338,11 +384,12 @@ td.stock-status{
 }
 
 /*------------------------------------------*/
-/* Section 3 - Stores List & Pagination */
+/* Section - Stores List & Pagination */
 /*------------------------------------------*/
 
 section#stores-list{
     display:none;
+    margin-bottom:80px;
 }
 
 #stores-list-heading .product-name{
@@ -431,5 +478,17 @@ img.store{
 
 /* fade effects: becomes visible */
 #seasonal-beverages.animated{
+    opacity:1;
+}
+
+#summer .heading h1,
+#summer .heading h2{
+    opacity:0;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+}
+
+#summer .heading h1.animated
+#summer .heading h2.animated{
     opacity:1;
 }
