fixed font size for heading

--- a/css/site.css
+++ b/css/site.css
@@ -195,6 +195,7 @@ section .heading{
 
 section .heading h1{
     margin-top:0px;
+    font-size:520%;
 }
 
 /*------------------------------------------*/
